--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-TELEGRAM_API=<YOUR_TELEGRAM_API_KEY>
-GPT_API=<YOUR_CHATGPT_API_KEY>
+TELEGRAM_API=<"YOUR_TELEGRAM_API_KEY">
+GPT_API=<"YOUR_CHATGPT_API_KEY">
